deploy gh-pages

--- a/package.json
+++ b/package.json
@@ -2,14 +2,18 @@
   "name": "board-flights",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://i-obraztcov.github.io/board-flights",
   "dependencies": {
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
+    "gh-pages": "^1.2.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-scripts": "1.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
